// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookSeriesInfoList renders many book series info 1`] = `
<DocumentFragment>
  <div
    class="__InlineList__"
    data-testid="inline-data-list"
  >
    <span
      class=""
    >
      Published in: 
    </span>
    <ul>
      <li>
        <span>
          A title of book, 1
        </span>
         and 
      </li>
      <li>
        <span>
          Another title of book, 2
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`BookSeriesInfoList renders one book series info 1`] = `
<DocumentFragment>
  <div
    class="__InlineList__"
    data-testid="inline-data-list"
  >
    <span
      class=""
    >
      Published in: 
    </span>
    <ul>
      <li>
        <span>
          A title of book, 1
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
